Révision de pointeurs

--- a/c/pointeurs/Makefile
+++ b/c/pointeurs/Makefile
@@ -1,2 +1,3 @@
-pointeurs : pointeurs.c
-	cc pointeurs.c -o pointeurs.elf
+pointeurs.elf : pointeurs.c
+	# Ici encore je ne mets pas de -Wextra car je ne me sers pas de argc et argv.
+	cc -Wall pointeurs.c -o pointeurs.elf
