--- a/c/hello_world/Makefile
+++ b/c/hello_world/Makefile
@@ -2,3 +2,6 @@ hello_world.elf : hello_world.c
 		# argc et argv ne sont pas utilisés dans ce code, mais je n'ai pas envie
 		# d'avoir de warnings pour cela donc je ne met pas de -Wextra ici.
 		cc -Wall -o hello_world.elf hello_world.c
+
+hello_world.exe : hello_world.c
+		clang.exe -Wall -o hello_world.exe hello_world.c
