--- a/c/librairie_standard/Makefile
+++ b/c/librairie_standard/Makefile
@@ -1,2 +1,2 @@
-librairie_standard : librairie_standard.c
-		cc -o librairie_standard.elf librairie_standard.c
+librairie_standard.elf: librairie_standard.c
+		cc -Wall -o librairie_standard.elf librairie_standard.c
