--- a/c/structures_avancees/Makefile
+++ b/c/structures_avancees/Makefile
@@ -1,2 +1,2 @@
 structures_avancees : structures_avancees.c
-		cc -o structures_avancees.elf structures_avancees.c
+		cc -Wall -o structures_avancees.elf structures_avancees.c
