Le tutoriel pointeurs fonctionne aussi sous Windows

--- a/c/pointeurs/Makefile
+++ b/c/pointeurs/Makefile
@@ -1,3 +1,6 @@
 pointeurs.elf : pointeurs.c
 	# Ici encore je ne mets pas de -Wextra car je ne me sers pas de argc et argv.
 	cc -Wall pointeurs.c -o pointeurs.elf
+
+pointeurs.exe : pointeurs_w.c
+	clang.exe -Wall pointeurs_w.c -o pointeurs.exe
