--- a/c/structures_avancees/Makefile
+++ b/c/structures_avancees/Makefile
@@ -1,2 +1,5 @@
-structures_avancees : structures_avancees.c
+structures_avancees.elf : structures_avancees.c
 		cc -Wall -o structures_avancees.elf structures_avancees.c
+
+structures_avancees.exe : structures_avancees_w.c
+		clang.exe -Wall -o structures_avancees.exe structures_avancees_w.c
