Correction de bugs de la librairie standard sous windows

--- a/c/librairie_standard/Makefile
+++ b/c/librairie_standard/Makefile
@@ -1,2 +1,5 @@
 librairie_standard.elf: librairie_standard.c
 		cc -Wall -o librairie_standard.elf librairie_standard.c
+
+librairie_standard.exe: librairie_standard_w.c
+		clang.exe -Wall -o librairie_standard.exe librairie_standard_w.c
