Creation d'un système de compilation plus simple

--- a/c/hello_world/Makefile
+++ b/c/hello_world/Makefile
@@ -4,4 +4,10 @@ hello_world.elf : hello_world.c
 		cc -Wall -o hello_world.elf hello_world.c
 
 hello_world.exe : hello_world.c
-		clang.exe -Wall -o hello_world.exe hello_world.c
+		clang.exe -Wall -o hello_world.exe hello_world_w.c
+
+linux: hello_world.elf
+	echo "Compilation de hello_world.elf achevée."
+
+windows: hello_world.exe
+	echo "Compilation de hello_world.exe achevée."
