Correction du Makefile

--- a/c/etats_indefinis/Welcome_to_the_abyss/Makefile
+++ b/c/etats_indefinis/Welcome_to_the_abyss/Makefile
@@ -6,7 +6,7 @@ Source 	:= Vecteur.c welcome_to_the_abyss.c String.c Tri.c
 out 		:= welcome_to_the_abyss.elf
 
 welcome_to_the_abyss: $(Vecteur) $(Abyss) $(String) $(Tri)
-	gcc $(Source) -o $(out)
+	cc $(Source) -o $(out)
 
 assembleur : welcome_to_the_abyss.c
-	gcc -O0 -S welcome_to_the_abyss.c -o welcome_to_the_abyss.s
+	cc -O0 -S welcome_to_the_abyss.c -o welcome_to_the_abyss.s
