Ajout de la compilation simplifiée

--- a/c/etats_indefinis/Welcome_to_the_abyss/Makefile
+++ b/c/etats_indefinis/Welcome_to_the_abyss/Makefile
@@ -5,8 +5,14 @@ Tri			:= Tri.h Tri.c
 Source 	:= Vecteur.c welcome_to_the_abyss.c String.c Tri.c
 out 		:= welcome_to_the_abyss.elf
 
-welcome_to_the_abyss: $(Vecteur) $(Abyss) $(String) $(Tri)
+$(out): $(Vecteur) $(Abyss) $(String) $(Tri)
 	cc $(Source) -o $(out)
 
 assembleur : welcome_to_the_abyss.c
 	cc -O0 -S welcome_to_the_abyss.c -o welcome_to_the_abyss.s
+
+linux: $(out)
+	echo "Compilation de $(out) achevée."
+
+windows:
+	echo "Pas de support Windows pour l'instant."
